@@ -606,40 +606,57 @@ class FlatfileCacheDatabase(CacheDatabase):
         self._stoprequest = True
         self._cleaner.join()
 
+    def _read_one_storefile(self, filename):
+        fd = open(filename, 'r+U')
+        db = {}
+        for line in fd:
+            try:
+                subkey, time, value = line.rstrip().split(None, 2)
+                if value != '-':
+                    db[subkey] = Entry(float(time), None, value)
+                elif subkey in db:
+                    db[subkey].expired = True
+            except Exception:
+                self.log.warning('could not interpret line from '
+                    'cache file %s: %r' % (filename, line), exc=1)
+        return fd, db
+
     def initDatabase(self):
         # read the last entry for each key from disk
         nkeys = 0
+        do_rollover = False
+        # read entries from today if they exist
+        curdir = path.join(self._basepath, self._year, self._currday)
+        # else read from last day with cache entries by default (lastday must be
+        # a symlink to the last day directory)
+        if not path.isdir(curdir):
+            curdir = path.join(self._basepath, 'lastday')
+            # in this case, we need to create new cache files for today, so we
+            # perform a faux rollover immediately after reading the db
+            do_rollover = True
+        # and if that doesn't exist, give up
+        if not path.isdir(curdir):
+            return
         with self._cat_lock:
-            curdir = path.join(self._basepath, self._year, self._currday)
-            if not path.isdir(curdir):
-                return
             for fn in os.listdir(curdir):
                 cat = fn.replace('-', '/')
                 try:
-                    fd = open(path.join(curdir, fn), 'r+U')
-                    db = {}
-                    for line in fd:
-                        try:
-                            subkey, time, value = line.rstrip().split(None, 2)
-                            if value != '-':
-                                db[subkey] = Entry(float(time), None, value)
-                            elif subkey in db:
-                                db[subkey].expired = True
-                        except Exception:
-                            self.log.warning('could not interpret line from '
-                                'cache file %s: %r' % (fn, line), exc=1)
+                    fd, db = self._read_one_storefile(path.join(curdir, fn))
                     lock = threading.Lock()
                     self._cat[cat] = [fd, lock, db]
                     nkeys += len(db)
                 except Exception:
                     self.log.warning('could not read cache file %s' % fn, exc=1)
-        self.log.info('loaded %d keys from files' % nkeys)
+            if do_rollover:
+                self._rollover()
+        self.log.info('loaded %d keys from files in %s' % (nkeys, curdir))
 
     def _rollover(self):
+        """Must be called with self._cat_lock held."""
         self.log.debug('ROLLOVER started')
         ltime = localtime()
         # set the days and midnight time correctly
-        #prevday = self._currday
+        self._year = str(ltime[0])
         self._currday = '%02d-%02d' % ltime[1:3]
         self._midnight = mktime(ltime[:3] + (0,) * (8-3) + (ltime[8],))
         self._nextmidnight = self._midnight + 86400
@@ -652,6 +669,14 @@ class FlatfileCacheDatabase(CacheDatabase):
                     fd.write('%s\t%s\t%s\n' %
                              (subkey, self._midnight, entry.value))
             fd.flush()
+        # set the 'lastday' symlink to the current day directory
+        try:
+            lname = path.join(self._basepath, 'lastday')
+            if path.lexists(lname):
+                os.unlink(lname)
+            os.symlink(path.join(self._year, self._currday), lname)
+        except Exception:
+            self.log.warning('error setting "lastday" symlink', exc=1)
         # old files could be compressed here, but it is probably not worth it
 
     def _create_fd(self, category):
