@@ -11,6 +11,9 @@ Changelog for NICOS 2
   - Fixed glitches in cache handling of expired values when restarting
     the cache server.
 
+  - The cache now re-loads database keys from disk even if not restarted
+    on the same day.
+
 **Release 2.1.1 (2012-03-22)**
 
   - Fixed an elog bug that caused elog to quit on Unicode errors.
